# north_africa_bank_form_invoice_validation_MAGNAAI-2

./: BILINGUAL_EDITABLE_FEATURES.md  COMPLETE_FEATURES_GUIDE.md  DATABASE_LOOKUP_FEATURE.md  DUAL_FRONTEND_SUMMARY.md  HTML_FRONTEND_GUIDE.md  MIGRATION_SUMMARY.md  README.md  SESSION_SUMMARY.md  main.py  pyproject.toml  test_extraction_migration.py  test_stack.py
agents/: __init__.py  base_agent.py  chat_agent.py  external_api_agent.py  extraction_agent.py  validation_agent.py
api/: main.py
config/: constants.py  settings.py
frontend/: app.py
locales/: i18n.py
magna_ai_lc_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
schemas/: lc_fields.py  models.py
static/: index.html
static/css/: styles.css
static/js/: app.js  i18n.js
tools/: server.py  server.py_500_serverError
utils/: database.py  llm_clients.py  pdf_utils.py  unlocode.py
workflows/: graphs.py
